# E-ink-Pico

./: E-ink-Pico-BOM.xlsx  README.md
PCB Files/: E-ink-Pico-cache.lib  E-ink-Pico.dcm  E-ink-Pico.lib  E-ink-Pico.sch  Interfaces.sch  Power+Processing.sch  README.md  sym-lib-table
Software/: CMakeLists.txt  README.md  build.bash  main.c  utils.c
Software/display/: CMakeLists.txt  EPD_7in5_V2_test.c  EPD_Test.h  EPD_display_test.c  ImageData.c  ImageData.h
Software/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
Software/lib/Fonts/: CMakeLists.txt
Software/lib/GUI/: CMakeLists.txt  GUI_Paint.c
Software/lib/e-Paper/: CMakeLists.txt
